--- a/src/UserOutput/UserOutput.css
+++ b/src/UserOutput/UserOutput.css
@@ -1,6 +1,6 @@
 .UserOutput{
   margin: 5px;
-  border: 2px solid gray;
+  border: 2px solid rgb(243, 157, 157);
   width: 80%;
   margin: 20px auto;
 }
